# candid-api

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  SUPABASE-SETUP.md  pyproject.toml  render.yaml
scripts/: mint_smoke_token.py
src/app/: config.py  main.py
src/app/auth/: jwt.py
src/app/clients/: firebase.py  r2.py  resend.py  supabase.py
src/app/models/: device.py  event.py  group.py  post.py  profile.py  prompt.py
src/app/routers/: dev.py  devices.py  events.py  feed.py  groups.py  posts.py  profile.py  prompts.py
src/app/services/: devices.py  events.py  feed.py  groups.py  invites.py  members.py  posts.py  profile.py  prompts.py
src/app/workers/: dispatcher.py  expirer.py  generator.py  main.py
supabase/migrations/: 20260526195531_create_profiles.sql  20260529212325_create_mvp_tables.sql  20260530120000_posts_prompt_id_unique.sql  20260610120000_create_client_events.sql
tests/: test_auth.py  test_client_events_migration.py  test_dev_fire_prompt.py  test_dev_trigger_prompt.py  test_devices.py  test_dispatcher.py  test_events.py  test_expirer.py  test_feed.py  test_firebase_client.py  test_generator.py  test_groups.py  test_health.py  test_posts.py  test_posts_prompt_confirm.py  test_profile.py  test_prompt_windows.py  test_prompts_router.py  test_r2.py  test_workers_main.py
tests/integration/: conftest.py  test_feed.py  test_groups.py  test_posts.py  test_rls.py  test_trigger.py
