[project]
name = "candid-api"
version = "0.1.0"
description = "Candid backend API (Phase 0 skeleton)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "supabase>=2.9",
    "boto3>=1.35",
    "firebase-admin>=6.5",
    "resend>=2.4",
    "python-multipart>=0.0.12",
    "pyjwt[crypto]>=2.9",
    # tzdata: Python's stdlib `zoneinfo` falls back to system tzdata on Linux
    # but has nothing to fall back to on Windows or in slim Docker images.
    # Bundle the IANA database so per-user local-window math works everywhere.
    "tzdata>=2025.1",
    # APScheduler boots the three Phase 4 background jobs (generator,
    # dispatcher, expirer) in a single Render Background Worker.
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".claude", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI injects via call-in-default; these are safe to use as argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires live Supabase env vars (skipped when missing)",
]
